<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/prestitoCopertinaIV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Libro:"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/libroTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Il giovane Holden, 5775995555"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data Inizio: "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/dataInizioTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019-11-20"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data Fine: "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/dataFineTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019-11-20"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data Consegna: "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/dataConsegnaTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019-11-20"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Attivo: "
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/attivoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019-11-20"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prestitoRatingTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <ImageView
                    android:id="@+id/prestitoStarIV"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/star"
                    android:visibility="invisible"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/commentoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Commento: "
                    android:textColor="#146DDA"/>

                <TextView
                    android:id="@+id/commentoTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/valutaButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="#146DDA"
            android:layout_gravity="center"
            android:text="Valuta"
            android:textSize="10dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>