<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/prestiti"
        android:title="Miei Prestiti"/>
    <item
        android:id="@+id/prenotazioni"
        android:title="Mie Prenotazioni"/>
    <item
        android:id="@+id/interessi"
        android:title="Miei Interessi"/>

    <item
        android:id="@+id/logout"
        android:title="Logout"/>
</menu>